--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,18 +1,15 @@
-# docker-compose.yml
-version: '3.8'
+# docker-compose.prod.yml
+version: "3.8"
 
 services:
   web:
     build: .
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/wallet_db
       - PORT=8000
-      - WEB_CONCURRENCY=1
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+      - WEB_CONCURRENCY=2
     depends_on:
       - db
 
