--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi
-uvicorn
-sqlmodel
-psycopg2-binary
-alembic
-asyncpg
+fastapi==0.103.2
+uvicorn==0.23.2
+sqlmodel==0.0.14
+psycopg2-binary==2.9.9
+alembic==1.12.1
+asyncpg==0.28.0
+sqlalchemy==1.4.49
+pydantic==1.10.13
