--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - DATABASE_URL=postgresql://user:password@db:5432/wallet_db
       - PORT=8000
       - WEB_CONCURRENCY=1
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: sh -c "python seed.py && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
     depends_on:
       - db
 
